Add documentation for outgoing log streaming and exporting

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -108,7 +108,7 @@
 	event type chart = yes
 	event action chart = yes
 
-	# Example of how to capture create / attach / die events for a named container:
+	## Example of how to capture create / attach / die events for a named container:
 	# custom 1 chart = serverA events
 	# custom 1 regex name = container create
 	# custom 1 regex = .*\bcontainer create\b.*\bname=serverA\b.*
@@ -120,6 +120,24 @@
 	# custom 3 chart = serverA events
 	# custom 3 regex name = container die
 	# custom 3 regex = .*\bcontainer die\b.*\bname=serverA\b.*
+
+	## Stream to https://cloud.openobserve.ai/
+	# output 1 name             = http
+	# output 1 URI              = YOUR_API_URI
+	# output 1 Host             = api.openobserve.ai
+	# output 1 Port             = 443
+	# output 1 tls              = On
+	# output 1 Format           = json
+	# output 1 Json_date_key    = _timestamp
+	# output 1 Json_date_format = iso8601
+	# output 1 HTTP_User        = test@netdata.cloud
+	# output 1 HTTP_Passwd      = YOUR_OPENOBSERVE_PASSWORD
+	# output 1 compress         = gzip
+
+	## Real-time export to /tmp/docker_event_logs.csv
+	# output 2 name             = file
+	# output 2 Path             = /tmp
+	# output 2 File             = docker_event_logs.csv
 
 [Apache access.log]
 	## Example: Log collector that will tail Apache's access.log file and 
@@ -416,7 +434,7 @@
 	## Use inotify instead of file stat watcher. Set to 'no' to reduce CPU usage.
 	use inotify = yes
 
-	# Charts to enable
+	## Charts to enable
 	# collected logs total chart enable = no
 	# collected logs rate chart enable = yes
 	
