--- a/health/health.d/memory.conf
+++ b/health/health.d/memory.conf
@@ -17,34 +17,34 @@ component: Memory
 
 ## ECC Controller
 
- template: ecc_memory_mc_noinfo_correctable
+ template: ecc_memory_mc_correctable
        on: mem.edac_mc
     class: Errors
      type: System
 component: Memory
        os: linux
     hosts: *
-   lookup: sum -10m unaligned of correctable_noinfo
+   lookup: sum -10m unaligned of correctable, correctable_noinfo
     units: errors
     every: 1m
      warn: $this > 0
     delay: down 1h multiplier 1.5 max 1h
-     info: memory controller ${label:controller} ECC correctable errors (unknown DIMM slot) in the last 10 minutes
+     info: memory controller ${label:controller} ECC correctable errors in the last 10 minutes
        to: sysadmin
 
- template: ecc_memory_mc_noinfo_uncorrectable
+ template: ecc_memory_mc_uncorrectable
        on: mem.edac_mc
     class: Errors
      type: System
 component: Memory
        os: linux
     hosts: *
-   lookup: sum -10m unaligned of uncorrectable_noinfo
+   lookup: sum -10m unaligned of uncorrectable,uncorrectable_noinfo
     units: errors
     every: 1m
      crit: $this > 0
     delay: down 1h multiplier 1.5 max 1h
-     info: memory controller ${label:controller} ECC uncorrectable errors (unknown DIMM slot) in the last 10 minutes
+     info: memory controller ${label:controller} ECC uncorrectable errors in the last 10 minutes
        to: sysadmin
 
 ## ECC DIMM
