ebpf_yaml: Modify cachestat thread

--- a/collectors/ebpf.plugin/multi_metadata.yaml
+++ b/collectors/ebpf.plugin/multi_metadata.yaml
@@ -499,21 +499,24 @@ modules:
       plugin_name: ebpf.plugin
       module_name: cachestat
       monitored_instance:
-        name: ebpf cachestat
+        name: eBPF Cachestat
         link: ""
         categories:
           - data-collection.ebpf
-        icon_filename: ""
+        icon_filename: "ebpf.jpg"
       related_resources:
         integrations:
           list: []
       info_provided_to_referring_integrations:
         description: ""
-      keywords: []
+      keywords:
+        - Page cache
+        - Hit ratio
+        - eBPF
       most_popular: false
     overview:
       data_collection:
-        metrics_description: ""
+        metrics_description: "Monitor Linux page cache events giving for users a general vision about how his kernel is manipulating files."
         method_description: ""
       supported_platforms:
         include: []
