ebpf_yaml: Modify socket thread

--- a/collectors/ebpf.plugin/multi_metadata.yaml
+++ b/collectors/ebpf.plugin/multi_metadata.yaml
@@ -1049,21 +1049,27 @@ modules:
       plugin_name: ebpf.plugin
       module_name: socket
       monitored_instance:
-        name: ebpf socket
+        name: eBPF Socket
         link: ""
         categories:
           - data-collection.ebpf
-        icon_filename: ""
+        icon_filename: "ebpf.jpg"
       related_resources:
         integrations:
           list: []
       info_provided_to_referring_integrations:
         description: ""
-      keywords: []
+      keywords:
+        - TCP
+        - UDP
+        - bandwidth
+        - server
+        - connection
+        - socket
       most_popular: false
     overview:
       data_collection:
-        metrics_description: ""
+        metrics_description: "Monitor bandwidth consumption per application for protocols TCP and UDP."
         method_description: ""
       supported_platforms:
         include: []
