--- a/collectors/ebpf.plugin/multi_metadata.yaml
+++ b/collectors/ebpf.plugin/multi_metadata.yaml
@@ -1778,21 +1778,23 @@ modules:
       plugin_name: ebpf.plugin
       module_name: softirq
       monitored_instance:
-        name: ebpf softirq
+        name: eBPF SoftIRQ
         link: ""
         categories:
           - data-collection.ebpf
-        icon_filename: ""
+        icon_filename: "ebpf.jpg"
       related_resources:
         integrations:
           list: []
       info_provided_to_referring_integrations:
         description: ""
-      keywords: []
+      keywords:
+        - SoftIRQ
+        - eBPF
       most_popular: false
     overview:
       data_collection:
-        metrics_description: ""
+        metrics_description: "Monitor latency for each SoftIRQ present in host."
         method_description: ""
       supported_platforms:
         include: []
