ebpf_yaml: Modify mount thread

--- a/collectors/ebpf.plugin/multi_metadata.yaml
+++ b/collectors/ebpf.plugin/multi_metadata.yaml
@@ -1852,21 +1852,25 @@ modules:
       plugin_name: ebpf.plugin
       module_name: mount
       monitored_instance:
-        name: ebpf mount
+        name: eBPF Mount
         link: ""
         categories:
           - data-collection.ebpf
-        icon_filename: ""
+        icon_filename: "ebpf.jpg"
       related_resources:
         integrations:
           list: []
       info_provided_to_referring_integrations:
         description: ""
-      keywords: []
+      keywords:
+        - mount
+        - umount
+        - device
+        - eBPF
       most_popular: false
     overview:
       data_collection:
-        metrics_description: ""
+        metrics_description: "Monitor calls for mount and umount syscall."
         method_description: ""
       supported_platforms:
         include: []
