ebpf_yaml: Modify main thread

--- a/collectors/ebpf.plugin/multi_metadata.yaml
+++ b/collectors/ebpf.plugin/multi_metadata.yaml
@@ -2308,7 +2308,7 @@ modules:
       plugin_name: ebpf.plugin
       module_name: process
       monitored_instance:
-        name: ebpf process
+        name: eBPF Process
         link: ""
         categories:
           - data-collection.ebpf
@@ -2318,11 +2318,14 @@ modules:
           list: []
       info_provided_to_referring_integrations:
         description: ""
-      keywords: []
+      keywords:
+        - Memory
+        - plugin
+        - eBPF
       most_popular: false
     overview:
       data_collection:
-        metrics_description: ""
+        metrics_description: "Monitor internal memory usage."
         method_description: ""
       supported_platforms:
         include: []
