ebpf_yaml: Add keyword for hardrq

--- a/collectors/ebpf.plugin/multi_metadata.yaml
+++ b/collectors/ebpf.plugin/multi_metadata.yaml
@@ -437,7 +437,9 @@ modules:
           list: []
       info_provided_to_referring_integrations:
         description: ""
-      keywords: []
+      keywords:
+        - HardIRQ
+        - eBPF
       most_popular: false
     overview:
       data_collection:
