ebpf_yaml: Address review.

--- a/collectors/ebpf.plugin/multi_metadata.yaml
+++ b/collectors/ebpf.plugin/multi_metadata.yaml
@@ -17,11 +17,12 @@ modules:
       keywords:
         - file
         - eBPF
+        - fd
       most_popular: false
     overview:
       data_collection:
         metrics_description: "Monitor calls for functions responsible to open or close a file descriptor and possible errors."
-        method_description: ""
+        method_description: "Attach tracing (kprobes and trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -181,7 +182,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor calls for function creating tasks (threads and processes) inside Linux kernel."
-        method_description: ""
+        method_description: "Attach tracing (kprobes and tracepoint) to internal kernel functions."
       supported_platforms:
         include: []
         exclude: []
@@ -370,7 +371,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Measure latency for I/O events on disk."
-        method_description: ""
+        method_description: "Attach tracepoints to internal kernel functions."
       supported_platforms:
         include: []
         exclude: []
@@ -444,7 +445,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor latency for each HardIRQ available."
-        method_description: ""
+        method_description: "Attach tracepoints to internal kernel functions."
       supported_platforms:
         include: []
         exclude: []
@@ -519,7 +520,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor Linux page cache events giving for users a general vision about how his kernel is manipulating files."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -689,7 +690,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor syscalls responsible to move data from memory to storage device."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -790,7 +791,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor when flush events happen between disks."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -866,7 +867,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitors when swap has I/O events and applications executing events."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -981,7 +982,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor applications that reach out of memory."
-        method_description: ""
+        method_description: "Attach tracepoint to internal kernel functions."
       supported_platforms:
         include: []
         exclude: []
@@ -1075,7 +1076,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor bandwidth consumption per application for protocols TCP and UDP."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -1371,7 +1372,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor directory cache events per application given an overall vision about files on memory or storage device."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -1540,7 +1541,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor latency for main actions on filesystem like I/O events."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -1647,7 +1648,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor syscalls responsible to manipulate shared memory."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -1800,7 +1801,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor latency for each SoftIRQ available."
-        method_description: ""
+        method_description: "Attach kprobes to internal kernel functions."
       supported_platforms:
         include: []
         exclude: []
@@ -1876,7 +1877,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor calls for mount and umount syscall."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -1961,7 +1962,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor I/O events on Linux Virtual Filesystem."
-        method_description: ""
+        method_description: "Attach tracing (kprobe, trampoline) to internal kernel functions according options used to compile kernel."
       supported_platforms:
         include: []
         exclude: []
@@ -2331,7 +2332,7 @@ modules:
     overview:
       data_collection:
         metrics_description: "Monitor internal memory usage."
-        method_description: ""
+        method_description: "Uses netdata internal statistic to monitor memory management by plugin."
       supported_platforms:
         include: []
         exclude: []
